# zuzu_nes

./: .gitignore  CMakeLists.txt  Makefile  memory_tracker.c  nes_emulator  output  test_bus  test_output
helper/: debug_printf.c  debug_printf.h
include/: Bus.h  CPU.h
src/: Bus.c  CPU.c  main.c
test/: test_bus.c  test_bus.h  test_cpu.c  test_cpu.h  test_runner.c  unity.c
